# ethereum-prices

./: .gitignore  README.md  analyse-prices-hourly.ipynb  analyse-prices.ipynb  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  startup.sh
scripts/: aggregate-prices.py  deribit-account.py  evaluate-options.py  lambda-aggregate-prices.py  lambda-hello.py  lambda_hello.py
scripts/hello/: lambda.py
src/: binanceprices.py  helpers.py  optionspricing.py
src/lambdas/: aggregateprices.py  deribitaccount.py  evaluateoptions.py  hello.py
terraform/: main.tf  variables.tf
terraform/aws-lambda/: main.tf  outputs.tf  variables.tf
terraform/aws-lambda-schedule/: main.tf  variables.tf
terraform/aws-layer/: main.tf  outputs.tf  variables.tf
tests/: test_hello.py  test_s3.py
