[tool.poetry]
name = "option-valuation"
version = "0.1.0"
description = ""
authors = ["Christophe Alexandre <christophe.alexandre@pm.me>"]
packages = [{from="src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
jupyter = "^1.0.0"
python-binance = "^1.0.17"
pyarrow = "^15.0.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.8.0"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "main"
