[tool.poetry]
name = "option-valuation"
version = "0.1.0"
description = ""
authors = ["Christophe Alexandre <christophe.alexandre@pm.me>"]
packages = [
    {include = "**/*.py", from="src"}
]

[tool.poetry.dependencies]
python = "^3.12"
python-binance = "^1.0.17"

[tool.poetry.group.arrow.dependencies]
pyarrow = "^15.0.0"

[tool.poetry.group.pandas.dependencies]
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
boto3 = "^1.34.31"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aggregate-prices = "scripts.aggregate-prices:main"
